Bug 492970 - Prefer usage of Long.valueOf() over new Long in org.eclipse.core.runtime
Change-Id: I7565cda7791ec595bd8ff6378ece63272809b754
Signed-off-by: Lars Vogel <Lars.Vogel@vogella.com>